--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_round"
+        android:installLocation="preferExternal"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        app:menu="@menu/bottom_nav_menu"
+        android:theme="@style/AppTheme.NoActionBar"
 
-        android:theme="@style/AppTheme">
+        android:usesCleartextTraffic="true"
+        app:menu="@menu/bottom_nav_menu">
+        <activity
+
+            android:name=".firstStepActivity">
+        </activity>
+        <activity android:name=".AboutActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
